@@ -380,6 +380,7 @@ menu "Compressors / decompressors"
 if !BR2_PACKAGE_BUSYBOX_HIDE_OTHERS
 source "package/gzip/Config.in"
 endif
+source "package/libarchive/Config.in"
 source "package/lzo/Config.in"
 source "package/lzop/Config.in"
 source "package/lzma/Config.in"
